Fixed jumpy animations on the text, played with the layout on the film page

--- a/src/styles/abstracts/typography.css
+++ b/src/styles/abstracts/typography.css
@@ -18,6 +18,6 @@ h3 {
 
 p {
   font-size: 1.4rem;
-  font-weight: 200;
+  font-weight: 300;
   margin: 0;
 }
