--- a/src/styles/abstracts/variables.css
+++ b/src/styles/abstracts/variables.css
@@ -2,6 +2,7 @@
   /* Colours */
   --white: #fff;
   --black: #000;
+  --off-black: #272727;
   --main-blue: #132030;
   --light-blue: #57687C;
 
